--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,7 +19,7 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: docker.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: dragonheart
+  IMAGE_NAME: frost2k5/dragonheart
 
 
 jobs:
@@ -59,5 +59,5 @@ jobs:
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: frost2k5/dragonheart:latest
           labels: ${{ steps.meta.outputs.labels }}
