--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        flavour: |
+        flavor: |
           latest=true
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
